<resources>
    <string name="app_name">stayTuned</string>

<!--    Login Scrn   -->
    <string name="title_login">Login</string>
    <string name="desc_login">Sign in to your account</string>

    <!--    Signup Scrn   -->
    <string name="title_register">Register</string>
    <string name="desc_register">Create your account</string>
    <string name="email">Email</string>
    <string name="fullname">Fullname</string>

    <string name="your_email">Your Email</string>
    <string name="password">Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="don_t_have_an_account_yet">Don\'t have an account, yet? \nRegister here</string>
    <string name="enter_a_valid_email">Enter a valid email</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_registered_email">Enter registered email</string>
    <string name="empty_fullname">Enter fullname to proceed</string>
    <string name="empty_email">"Email is mandatory "</string>
    <string name="empty_password">Password can\'t be blank</string>
    <string name="invalid_email_address">Enter a valid Email address</string>
    <string name="contacts">Contacts</string>
    <string name="profile_info">Profile</string>


</resources>